# SanaEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt
Core/include/Debug/: Assertion.h
Core/include/ECS/: Actor.h  Actor.inl
Core/include/ECS/Component/: CMesh.h  CameraComponent.h  Component.h  DatasetGenComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  RecitfyComponent.h  RectifyComponent.h  TransformComponent.h  TransfromComponent.h
Core/include/Eventing/: Event.h
Core/include/SCore/Global/: ServiceLocator.h
Core/include/SMath/: Quaternion.h  SMat.h  SQuaternion.h  STransform.h  Transform.h
Core/include/SResourceManager/: ModelManager.h  ResourceRepo.h  ShaderManager.h  TextureManager.h  Util.h
Core/include/SceneSys/: Scene.h  SceneManager.h
Core/include/Serialize/: ISerializable.h  Serializer.h
Core/src/ECS/: Actor.cpp
Core/src/ECS/Component/: CameraComponent.cpp  Component.cpp  DatasetGenComponent.cpp  LightComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  RectifyComponent.cpp  TransformComponent.cpp
Core/src/Global/: ServiceLocator.cpp
Core/src/SMath/: Quaternion.cpp  SMat.cpp  SQuaternion.cpp
Core/src/SResourceManager/: ModelManager.cpp  ShaderManager.cpp  TextureManager.cpp
Core/src/SceneSys/: Scene.cpp  SceneManager.cpp
Core/src/Serialize/: Serializer.cpp
Editor/: CMakeLists.txt
Editor/include/SEditor/Core/: Application.h  AssetLoader.h  Camera.h  CameraCtrl.h  Cameraa.h  EdgeRunner.h  Editor.h  EditorRenderer.h  RuntimeContext.h  SimpleJoint.h
Editor/include/SEditor/Panels/: AssetBrowser.h  CameraView.h  DistortionRectiferPanel.h  Hierarchy.h  InfoPanel.h  Inspector.h  MainMenubar.h  SView.h  SceneView.h  TestView.h  VisLocPanel.h
Editor/include/SEditor/Util/: NfdDialog.h
Editor/src/: main.cpp
Editor/src/Panels/: CameraView.cpp  DistortionRectiferPanel.cpp  Hierarchy.cpp  InfoPanel.cpp  Inspector.cpp  MainMenubar.cpp  SView.cpp  SceneView.cpp  TestView.cpp  VisLocPanel.cpp
Editor/src/Util/: NfdDialog.cpp
Editor/src/core/: Application.cpp  AssetLoader.cpp  Camera.cpp  CameraCtrl.cpp  Cameraa.cpp  EdgeRunner.cpp  Editor.cpp  EditorRenderer.cpp  RuntimeContext.cpp
GUI/: CMakeLists.txt
GUI/include/SGUI/Core/: UImanager.h
GUI/include/SGUI/Panels/: Panel.h  WndPanel.h
GUI/include/SGUI/Widgets/: Compass.h  CustomWidgets.h
GUI/src/Core/: UImanager.cpp
GUI/src/Panels/: Panel.cpp  WndPanel.cpp
GUI/src/Widgets/: CustomWidgets.cpp
Render/: CMakeLists.txt
Render/include/SRender/Buffers/: GLFrameBuffer.h  GLShaderStorageBuffer.h  GLUniformBuffer.h
Render/include/SRender/Core/: EntityRenderer.h  GLRenderer.h
Render/include/SRender/LowRenderer/: Camera.h
Render/include/SRender/Passes/: ActorOutlineRenderPass.h  ActorPickerMaskRenderPass.h  EditorSceneRenderPass.h  ImgPrjDepthMapRenderPass.h  SceneRenderPass.h  SimpleRenderPass.h  SimpleRenderPipeline.h
Render/include/SRender/Resources/: AssimpParser.h  GLMesh.h  GLShader.h  GLShaderLoader.h  SAnimation.h  SBaseRenderResources.h  SLight.h  SMaterial.h  SMesh.h  SModel.h  SModelLoader.h  SShader.h  STexture.h  STextureLoader.h  Settings.h
Render/include/SRender/Settings/: GLSet.h
Render/include/context/: driver.h
Render/src/Buffers/: GLFrameBuffer.cpp  GLShaderStorageBuffer.cpp  GLUniformBuffer.cpp
Render/src/Core/: EntityRenderer.cpp  GLRenderer.cpp
Render/src/LowRenderer/: Camera.cpp
Render/src/Passes/: ActorOutlineRenderPass.cpp  ActorPickerMaskRenderPass.cpp  EditorSceneRenderPass.cpp  ImgPrjDepthMapRenderPass.cpp  SceneRenderPass.cpp  SimpleRenderPass.cpp  SimpleRenderPipeline.cpp
Render/src/Resources/: AssimpParser.cpp  GLMesh.cpp  GLShader.cpp  GLShaderLoader.cpp  SAnimation.cpp  SBaseRenderResources.cpp  SLight.cpp  SMaterial.cpp  SMesh.cpp  SModel.cpp  SModelLoader.cpp  SShader.cpp  STexture.cpp  STextureLoader.cpp
VisualLoc/: CMakeLists.txt
VisualLoc/include/VisualLoc/: DistortionRectifier.h  RenderBasedLocEngine.h  UndistortPipeline.h
VisualLoc/src/: RenderBasedLocEngine.cpp  UndistortPipeline.cpp
Wnd/: CMakeLists.txt
Wnd/include/SWnd/Input/: InputManager.h
Wnd/include/SWnd/context/: context.h
Wnd/src/Input/: InputManager.cpp
Wnd/src/context/: context.cpp
assets/shaders/: Atmosphere.glsl  SSBOlayout.h  UBOlayout.h  animation.glsl  distortion.glsl  distortionfunc.h  fshader.fs  fshader2.fs  fshader3.fs  fshader4.fs  fshader5.fs  fshaderlight.fs  gizmo.glsl  img_prj_depthmap.glsl  sky.fs  sky.vs  standard.glsl  test.glsl  undistortion.glsl  unlit.glsl  vshader.vs  vshader2.vs  vshader3.vs  vshader5.vs
dependencies/: CMakeLists.txt  spdlog.cmake
dependencies/GLAD/: CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
dependencies/assimp/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glfw/lib/: glfw3.lib
dependencies/glm/: CMakeLists.txt
dependencies/iconv/: CMakeLists.txt
dependencies/iconv/lib/: libiconvStatic.lib
dependencies/imgui/: CMakeLists.txt
dependencies/opencv/: .gitignore  CMakeLists.txt  OpenCVConfig.cmake  setup_vars_opencv4.cmd
dependencies/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/src/: stb_image.cpp  stb_image_resize.cpp  stb_image_write.cpp
dependencies/thread-pool/: CMakeLists.txt
dependencies/thread-pool/include/: ThreadPool.h
dependencies/tinyxml2/: CMakeLists.txt
