add_subdirectory(glfw)
add_subdirectory(GLAD)
add_subdirectory(glm)
add_subdirectory(assimp)
add_subdirectory(imgui)
add_subdirectory(stb_image)
add_subdirectory(opencv)
add_subdirectory(nativefiledialog)
add_subdirectory(nativefiledialog-extended)
add_subdirectory(iconv)
add_subdirectory(tinyxml2)
add_subdirectory(thread-pool)
include(spdlog.cmake)
